--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "laravel-mix": "^1.4",
     "open-sans-all": "^0.1.3",
     "vue": "^2.5.3",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   }
 }
